# bblocks-client-python

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
ogc/bblocks/: register.py  semantic_uplift.py  util.py  validate.py
test/: semantic_uplift.py
